added notes to prices, optimized images for About me

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ import Footer from "../components/Footer.astro";
             <div class="image-section">
                 <div class="images">
                     <img
-                        src="/img/about-person.jpg"
+                        src="/img/about-person-opt.jpg"
                         alt=""
                         width="400"
                         class="personal-photo"
@@ -29,13 +29,13 @@ import Footer from "../components/Footer.astro";
                         />
                         <div class="studio-photos">
                             <img
-                                src="/img/about-room2.jpeg"
+                                src="/img/about-room2-opt.jpeg"
                                 alt=""
                                 width="250"
                                 class="room-photo"
                             />
                             <img
-                                src="/img/about-room3.jpg"
+                                src="/img/about-room3-opt.jpg"
                                 alt=""
                                 width="250"
                                 class="room-photo"
@@ -156,7 +156,7 @@ import Footer from "../components/Footer.astro";
 
     .images {
         display: flex;
-        /* justify-content: center; */
+        justify-content: center;
         flex-flow: wrap;
         gap: 20px;
     }
