--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -141,11 +141,14 @@ import { Icon } from "astro-icon";
 		<!-- Prices -->
 		<div id="massage-price" class="price-section">
 			<h1>Preise</h1>
+			
 			<div class="prices">
 				<p>Klassische Massage 120 CHF pro 60 Minuten</p>
 				<p>Entspannungsmassage 120 CHF pro 60 Minuten</p>
 				<p>Sportmassage 120 CHF pro 60 Minuten</p>
 			</div>
+			<p>Die Behandlungsdauer versteht sich inklusive Vor- und Nachgespräch.</p>
+			<br>
 			<p>
 				Ein Grossteil der Krankenkassen übernimmt im Rahmen einer
 				Zusatzversicherung die Kosten einer Massage voll oder zum Teil.
