--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -42,7 +42,7 @@ import Footer from "../components/Footer.astro";
                     href1="#"
                     title1="Entspannungsmassage"
                     body1={["Bei einer Entspannungsmassage werden durch langsame und rhythmischen Knetungen und Streichungen des Gewebes die Durchblutung der Haut, Muskulatur und der Sehnen angeregt. Verhärtungen der Muskulatur werden weicher, Blockaden und Verspannungen lösen sich auf und Entspannung und Wohlbefinden stellt sich ein."]}
-                    body2="<p>Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt.</p>"
+                    body2="<p>Bei einer Entspannungsmassage werden durch langsame und rhythmischen Knetungen und Streichungen des Gewebes die Durchblutung der Haut, Muskulatur und der Sehnen angeregt. Verhärtungen der Muskulatur werden weicher, Blockaden und Verspannungen lösen sich auf und Entspannung und Wohlbefinden stellt sich ein.</p>"
                 />
                 <CardMassage
                     collapseLinkId="collapse3"
@@ -62,6 +62,8 @@ import Footer from "../components/Footer.astro";
                     <p>Sportmassage 120 CHF pro 60 Minuten</p>
                 </div>
                 <div class="price-text">
+                    <p>Die Behandlungsdauer versteht sich inklusive Vor- und Nachgespräch.</p>
+			        <br>
                     <p>
                         Ein Grossteil der Krankenkassen übernimmt im Rahmen einer
                         Zusatzversicherung die Kosten einer Massage voll oder zum Teil.
