--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -56,6 +56,7 @@ import { Icon } from "astro-icon";
                     </div>
                 </div>
                 <iframe
+                    loading="lazy"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2692.222292543229!2d8.4247139!3d47.5634632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479071c89afe7add%3A0x2d543a607ce5109b!2sIm%20See%203%2C%208187%20Weiach!5e0!3m2!1sen!2sch!4v1679263269765!5m2!1sen!2sch"
                     width="500"
                     height="300"
@@ -108,7 +109,8 @@ import { Icon } from "astro-icon";
                         >
                     </div>
                 </div>
-                <iframe
+                <iframe 
+                    loading="lazy"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2698.0629521094816!2d8.585375799999998!3d47.449712299999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479a9ff24aa526c7%3A0xcf18b03a3a02f0fc!2sLindenstrasse%2023%2C%208302%20Kloten!5e0!3m2!1sen!2sch!4v1679263639898!5m2!1sen!2sch"
                     width="500"
                     height="300"
