--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -120,6 +120,8 @@ import { Icon } from "astro-icon";
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </div>
+            <div class="contact-form">
+            </div>
         </div>
         <Footer />
     </main>
@@ -202,6 +204,10 @@ import { Icon } from "astro-icon";
 
     .address a:hover {
         color: #84858e;
+    }
+
+    .contact-form {
+        text-align: center;
     }
 
     @media (max-width: 960px) {
