--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -13,6 +13,7 @@ import Menu from "./Menu.astro";
         width: 100%;
         max-width: 1100px;
         box-sizing: border-box;
+        z-index: 20;
     }
 
     @media (max-width: 600px) {
