--- a/src/components/SlideshowEventList.astro
+++ b/src/components/SlideshowEventList.astro
@@ -1,37 +1,60 @@
 ---
+import { Icon } from "astro-icon";
+export interface Props {
+	slideImg1: string;
+    slideImg2: string;
+    slideImg3: string;
+    slideImg4: string;
+}
+
+const {slideImg1, slideImg2, slideImg3, slideImg4 } = Astro.props;
 ---
 
-<!-- slider container -->
+<!-- Slider container -->
 <div class="slider">
     <!-- slide 1 -->
     <div class="slide">
-        <img
-            src="https://source.unsplash.com/random?landscape,mountain"
-            alt=""
-        />
+      <img
+        src={slideImg1}
+        alt=""
+      />
     </div>
 
     <!-- slide 2 -->
     <div class="slide">
-        <img src="https://source.unsplash.com/random?landscape,cars" alt="" />
+      <img src={slideImg2} 
+      alt="" 
+      />
     </div>
 
     <!-- slide 3 -->
     <div class="slide">
-        <img src="https://source.unsplash.com/random?landscape,night" alt="" />
+      <img src={slideImg3} alt="" />
     </div>
 
     <!-- slide 4 -->
     <div class="slide">
-        <img src="https://source.unsplash.com/random?landscape,city" alt="" />
+      <img src={slideImg4} alt="" />
     </div>
 
     <!-- Control buttons -->
-    <button class="btn btn-next"></button>
-    <button class="btn btn-prev"></button>
-</div>
+    <button class="btn btn-next">
+        <Icon name="fa-solid:chevron-right" class="btn-icon" />
+    </button>
+    <button class="btn btn-prev">
+        <Icon name="fa-solid:chevron-left" class="btn-icon" />
+    </button>
+  </div>
 
 <script>
+    // Select all slides
+    const slides = document.querySelectorAll(".slide");
+
+    // loop through slides and set each slides translateX
+    slides.forEach((slide, indx) => {
+        slide.style.transform = `translateX(${indx * 100}%)`;
+    });
+
     // select next slide button
     const nextSlide = document.querySelector(".btn-next");
 
@@ -54,6 +77,24 @@
             slide.style.transform = `translateX(${100 * (indx - curSlide)}%)`;
         });
     });
+
+    // select prev slide button
+    const prevSlide = document.querySelector(".btn-prev");
+
+    // add event listener and navigation functionality
+    prevSlide.addEventListener("click", function () {
+        // check if current slide is the first and reset current slide to last
+        if (curSlide === 0) {
+            curSlide = maxSlide;
+        } else {
+            curSlide--;
+        }
+
+        //   move slide by 100%
+        slides.forEach((slide, indx) => {
+            slide.style.transform = `translateX(${100 * (indx - curSlide)}%)`;
+        });
+    });
 </script>
 
 <style>
@@ -63,6 +104,8 @@
         height: 350px;
         position: relative;
         overflow: hidden;
+        text-align: center;
+        border-radius: 4px;
     }
 
     .slide {
@@ -88,12 +131,18 @@
         border-radius: 50%;
         z-index: 10px;
         cursor: pointer;
-        background-color: #fff;
+        background-color: #FEEAFA;
+        opacity:0.8;
         font-size: 18px;
     }
 
     .btn:active {
         transform: scale(1.1);
+    }
+
+    .btn-icon {
+        height: 20px;
+        color: #8E9AAF;
     }
 
     .btn-prev {
