--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -49,9 +49,14 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
                 </div>
             </div>
 
-            <!-- <div class="slide-show">
-                <SlideshowEventList/>
-            </div> -->
+            <div class="slide-show">
+                <SlideshowEventList
+                    slideImg1="/img/about-person-opt.jpg"
+                    slideImg2="/img/about-process.jpg"
+                    slideImg3="/img/about-room2-opt.jpeg"
+                    slideImg4="/img/about-room3-opt.jpg"
+                />
+            </div>
 
             <div class="about-text">
                 <h2>Steckbrief</h2>
@@ -196,6 +201,12 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
         width: 250px;
     }
 
+    .slide-show {
+        padding: 20px 40px;
+        text-align: center;
+        display: none;
+    }
+
     .about-text {
         padding: 0 40px 20px 40px;
         max-width: 800px;
@@ -231,9 +242,16 @@ import SlideshowEventList from "../components/SlideshowEventList.astro";
 
         .image-section {
             padding: 0 20px;
+            display: none;
         }
         .studio-photos img {
            width: 100%;
+        }
+
+        .slide-show {
+            padding: 20px 20px;
+            text-align: center;
+            display: block;
         }
 
         .about-text {
